--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 exclude: [".gitignore", "README.md", "Gemfile"]
 title: "Claude Shannon"
-email: "chmbrlnd@tamu.edu"
+email: "oe@itsoc.org"
 description: ""
 url: "https://chmbrlnd.github.io/shannon"
 baseurl: "" # GitHub
