--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
 exclude: [".gitignore", "README.md", "Gemfile"]
-title: "Claude Shannon"
+title: "A Few Bits of Information Theory"
 email: "oe@itsoc.org"
 description: ""
-url: "https://chmbrlnd.github.io/"
-# url: "http://shannon.tamu.edu"
+#url: "https://chmbrlnd.github.io/"
+url: "http://shannon.tamu.edu"
 baseurl: "" # GitHub
 # twitter_username: ""
 # github_username: ""
